# Multigrid_Project

./: CMakeLists.txt  License.txt  Prolong_restrict.cpp  Prolongation.cpp  README.md  multigrid.h  test1.cpp
Doc/: README.md
Gauss_Seidel/: GS.cpp  a.out
Src/: multigrid_1D.h  multigrid_2D.h  multigrid_2D_parallel.h
Test/: parallel_test.cpp  test1.cpp  test1_2.cpp  test1_2_data.txt  test1_data.txt  test2.cpp  test2_data.txt  test3.cpp  test3_data.txt  test4.cpp  test4_data.txt  test5.cpp
